[gd_scene load_steps=9 format=1]

[ext_resource path="res://Source/Cutscenes/noise.png" type="Texture" id=1]
[ext_resource path="res://Source/Cutscenes/sprites/alice.png" type="Texture" id=2]
[ext_resource path="res://Source/Cutscenes/sprites/rowan.png" type="Texture" id=3]
[ext_resource path="res://Scripts/AfterBattle1Cut.gd" type="Script" id=4]
[ext_resource path="res://Source/OxygenMono-Regular.fnt" type="BitmapFont" id=5]

[sub_resource type="CanvasItemShader" id=1]

_code = {
"fragment": "uniform texture mask;
uniform float strength = 0;

float value = pow(tex(mask, UV).r, 5);

COLOR.a -= (pow(strength + 1, 10) - 1) * value;
",
"fragment_ofs": 0,
"light": "",
"light_ofs": 0,
"vertex": "",
"vertex_ofs": 0
}

[sub_resource type="CanvasItemMaterial" id=2]

shader/shader = SubResource( 1 )
shader/shading_mode = 0
shader_param/mask = ExtResource( 1 )
shader_param/strength = 0.0

[sub_resource type="Animation" id=3]

resource/name = "fade"
length = 2.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:material/material:shader_param/strength")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 1, 2 ),
"transitions": FloatArray( 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 0.8, 1.0 ]
}

[node name="Background" type="TextureFrame"]

material/material = SubResource( 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1104.0
margin/bottom = 621.0
stretch_mode = 0

[node name="char1" type="Sprite" parent="."]

transform/pos = Vector2( 181.964, 384.274 )
transform/scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 2 )

[node name="char2" type="Sprite" parent="."]

transform/pos = Vector2( 880.385, 356.558 )
transform/scale = Vector2( 0.9, 0.9 )
texture = ExtResource( 3 )
flip_h = true

[node name="TextureFrame" type="TextureFrame" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
stretch_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/fade = SubResource( 3 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="TextPanel" type="Panel" parent="."]

visibility/opacity = 0.7
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 33.0
margin/top = 479.0
margin/right = 995.0
margin/bottom = 587.0
script/script = ExtResource( 4 )

[node name="Next" type="MenuButton" parent="TextPanel"]

rect/scale = Vector2( 0.7, 0.7 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 866.0
margin/top = 68.0
margin/right = 978.0
margin/bottom = 120.0
custom_fonts/font = ExtResource( 5 )
toggle_mode = false
click_on_press = true
enabled_focus_mode = 0
shortcut = null
text = "Next"
flat = true
items = [  ]

[node name="Text" type="Label" parent="TextPanel"]

rect/scale = Vector2( 0.8, 0.8 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 21.0
margin/top = 8.0
margin/right = 1050.0
margin/bottom = 123.0
custom_fonts/font = ExtResource( 5 )
valign = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = 2

[connection signal="pressed" from="TextPanel/Next" to="TextPanel" method="_on_Next_pressed"]


